--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Strange Birds</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>About</li>
+        <li>Rainforest</li>
+        <li>Desert</li>
+        <li>Arctic</li>
+      </ul>
+    </nav>
     <h1>Strange Birds</h1>
     <h2>Rainforest</h2>
     <h2>Desert</h2>
