--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <nav>
       <ul>
-        <li>About</li>
-        <li>Rainforest</li>
-        <li>Desert</li>
-        <li>Arctic</li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="rainforest.html">Rainforest</a></li>
+        <li><a href="desert.html">Desert</a></li>
+        <li><a href="arctic.html">Arctic</a></li>
       </ul>
     </nav>
     <h1>Strange Birds</h1>
